PIRATE-3124   Min height for navigation bar, prevents it from being collapsed when the basket is hidden

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -532,6 +532,7 @@ input[type="search"]::-webkit-search-decoration {
 .template-nav {
 	background-color: @color-swatch2;
 	z-index: 1;
+	min-height: 54px !important;
 }
 div.widget .extendednavigation ul,
 div.widget.extendednavigation ul {
